--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .main_box{
-    background:url("photo.jpg");
+    background:url("images/photo.jpg");
     height:100vh;
     background-size: cover;
 }
