--- a/style.css
+++ b/style.css
@@ -2,13 +2,7 @@
     margin:0;
     padding:0;
     font-family: "Poppins" , sans-serif;
-    box-sizing: border-box;
 }
-
-body {
-  overflow-x: hidden;
-}
-
 .main_box{
     background:url("images/photo.jpg");
     height:100vh;
@@ -113,7 +107,7 @@ box-shadow: 0 0 4px rgba(255,255 ,255,0.5) ;
     #check:checked ~ .sidebar_menu .btn_two i{
         opacity: 1;
         }  
-@media (max-width: 360px) {
+/* @media (max-width: 360px) {
 .sidebar_menu {
     width: 80%; 
 }
@@ -126,4 +120,4 @@ box-shadow: 0 0 4px rgba(255,255 ,255,0.5) ;
     left: 10px;
 }
 }
-
+ */
